--- a/help1.html
+++ b/help1.html
@@ -6,30 +6,50 @@
   <title>Disable Windows Defender - Step by Step</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      margin: 0;
-      padding: 0;
-      background: #000000;
-      color: #333;
-    }
+  font-family: Arial, sans-serif;
+  line-height: 1.6;
+  margin: 0;
+  padding: 0;
+  background: url(https://images8.alphacoders.com/135/thumb-1920-1354199.jpeg) no-repeat center center fixed;
+  background-size: cover;
+  color: #333;
+}
     header {
-      background: #ca4523;
+      background: #000000;
       color: #fff;
       border-radius: 15px 15px 15px 15px;
       padding: 20px;
       text-align: center;
     }
+    .discord-header {
+      display: flex;
+      align-items: center;
+      background-color: #313137;
+      color: white;
+      padding: 10px 20px;
+      font-family: sans-serif;
+    }
+    .discord-header img {
+      width: 50px;
+      height: 50px;
+      margin-right: 10px;
+    }
+    .discord-header a {
+      color: white;
+      text-decoration: underline;
+      margin-left: 5px;
+    }
     .container {
       padding: 20px;
       max-width: 900px;
       margin: auto;
-      background: #fff;
+      color: white;
+      background: #000000;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
      /* Sidebar */
      .sidebar {
-      background-color: #000000;
+      background-color: #5b000000;
       color: white;
       width: 161px;
       padding: 0px 21px;
@@ -37,7 +57,7 @@
       height: 100vh;
       position: fixed;
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
       align-items: center;
       text-align: center;
     }
@@ -47,8 +67,8 @@
       height: 120px;
       border-radius: 50%;
       object-fit: cover;
-      border: 3px solid white;
-      margin-bottom: 15px;
+      border: 1px solid white;
+      margin-bottom: 5px;
     }
 
     .sidebar h2 {
@@ -56,7 +76,7 @@
       font-size: 20px;
     }
     h2 {
-      color: #0078D7;
+      color: #2748ff;
     }
     .step {
       margin-bottom: 30px;
