--- a/help1.html
+++ b/help1.html
@@ -124,6 +124,13 @@
       <h1>How to Disable Windows Defender & Exclude a Folder</h1>
     </header>
 
+  <div class="discord-header">
+    <img src="https://cdn-icons-png.flaticon.com/512/2111/2111370.png" alt="Discord Icon" />
+    <span>For more info, join us on 
+      <a href="https://discord.gg/FdMGmcq6" target="_blank">Discord</a>
+    </span>
+  </div>
+    
   <div class="container">
     <h2>Part 1: Disable Real-Time Protection</h2>
 
