--- a/help2.html
+++ b/help2.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>how to mod REPO Tutorial - Step by Step</title>
   <style>
-    body {
+     body {
   font-family: Arial, sans-serif;
   line-height: 1.6;
   margin: 0;
@@ -41,10 +41,11 @@
     }
     .container {
       padding: 20px;
-      max-width: 900px;
+      max-width: 1000px;
       margin: auto;
       color: white;
-      background: #000000;
+      backdrop-filter: blur(9px);
+      background: linear-gradient(3deg, #000000c7, #20012fb5);
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
      /* Sidebar */
@@ -89,16 +90,18 @@
       border: 1px solid #ccc;
     }
     .note {
-      background: #e7f3ff;
+      background: #12202ec2;
       border-left: 5px solid #0078D7;
       padding: 10px;
       margin-top: 20px;
+      border-radius: 16px;
     }
     footer {
       text-align: center;
       padding: 10px;
-      background: #eee;
+      background: #000000;
       font-size: 14px;
+      color: aliceblue;
     }
     @media screen and (max-width: 768px) {
       .sidebar {
