--- a/help1.html
+++ b/help1.html
@@ -151,7 +151,7 @@
 <body>
 <!-- Right Side Menu -->
 <div class="right-menu">
-  <a href="page1.html">
+  <a href="help2.html">
     <img src="images/iconrepo.png" alt="Icon 1"> How to mod repo OFME
   </a>
   <a href="page2.html">
