--- a/help2.html
+++ b/help2.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>how to mod REPO Tutorial - Step by Step</title>
   <style>
-     body {
+      body {
   font-family: Arial, sans-serif;
   line-height: 1.6;
   margin: 0;
@@ -223,7 +223,7 @@
   </div>
 
   <footer>
-    &copy; 2025 Your Tutorial Page | All rights reserved.
+    &copy; shado& Tutorial 2025 | All rights reserved.
   </footer>
 </body>
 </html>
