--- a/index2test.html
+++ b/index2test.html
@@ -240,7 +240,7 @@
 
   <!-- CAPTCHA container -->
   <div id="captcha-box">
-    <div class="g-recaptcha" data-sitekey="YOUR_SITE_KEY" data-callback="onCaptchaVerified"></div>
+    <div class="g-recaptcha" data-sitekey="6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI" data-callback="onCaptchaVerified"></div>
   </div>
 
   <!-- Scripts -->
