--- a/help2.html
+++ b/help2.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><script type="text/javascript" src="/___vscode_livepreview_injected_script"></script>
+<head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>how to mod REPO Tutorial - Step by Step</title>
@@ -101,6 +101,12 @@
       display: block;
       margin: 10px 0;
       border: 1px solid #ccc;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    .step img:hover {
+      opacity: 0.8;
     }
 
     .note {
@@ -205,12 +211,61 @@ background: rgb(0, 0, 0); border: none; cursor: pointer;
 .meaw1 {
     position: fixed; top: 10px; right: 9px; z-index: 1000;
 }
+
+    /* Lightbox/Modal styles */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 9999;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.9);
+      overflow: auto;
+    }
+
+    .modal-content {
+      margin: auto;
+      transform: translate(0%, 20%);
+      display: block;
+      width: 80%;
+      max-width: 1200px;
+      max-height: 80vh;
+      animation: zoom 0.3s;
+    }
+
+    @keyframes zoom {
+      from {transform: scale(0.1);}
+      to {transform: scale(1);}
+    }
+
+    .close {
+      position: absolute;
+      top: 15px;
+      right: 35px;
+      color: #f1f1f1;
+      font-size: 40px;
+      font-weight: bold;
+      transition: 0.3s;
+    }
+
+    .close:hover,
+    .close:focus {
+      color: #bbb;
+      text-decoration: none;
+      cursor: pointer;
+    }
+
     @media screen and (max-width: 768px) {
       .sidebar {
         display: none;
       }
       .main-content {
         margin-left: 0;
+      }
+      .modal-content {
+        width: 95%;
       }
     }
   </style>
@@ -298,21 +353,63 @@ background: rgb(0, 0, 0); border: none; cursor: pointer;
     &copy; 2025 shado Tutorial | All rights reserved.
   </footer>
   </div>
+
+  <!-- The Modal/Lightbox -->
+  <div id="myModal" class="modal">
+    <span class="close">&times;</span>
+    <img class="modal-content" id="img01">
+  </div>
+
   <script>
   const toggleBtn = document.getElementById('menuToggleBtn1');
-const menu = document.getElementById('menu1');
+  const menu = document.getElementById('menu1');
 
-// Toggle menu on button click
-toggleBtn.addEventListener('click', function (e) {
-  e.stopPropagation(); // Prevent click from bubbling up to document
-  menu.classList.toggle('show1');
-});
+  // Toggle menu on button click
+  toggleBtn.addEventListener('click', function (e) {
+    e.stopPropagation(); // Prevent click from bubbling up to document
+    menu.classList.toggle('show1');
+  });
 
-// Hide menu when clicking outside
-document.addEventListener('click', function (e) {
-  if (!menu.contains(e.target) && !toggleBtn.contains(e.target)) {
-    menu.classList.remove('show1');
+  // Hide menu when clicking outside
+  document.addEventListener('click', function (e) {
+    if (!menu.contains(e.target) && !toggleBtn.contains(e.target)) {
+      menu.classList.remove('show1');
+    }
+  });
+
+  // Lightbox functionality
+  const modal = document.getElementById('myModal');
+  const modalImg = document.getElementById("img01");
+
+  // Get all images in steps and add click event
+  document.querySelectorAll('.step img').forEach(img => {
+    img.onclick = function() {
+      modal.style.display = "block";
+      modalImg.src = this.src;
+    }
+  });
+
+  // Get the <span> element that closes the modal
+  const span = document.getElementsByClassName("close")[0];
+
+  // When the user clicks on <span> (x), close the modal
+  span.onclick = function() { 
+    modal.style.display = "none";
   }
-});</script>
+
+  // Also close when clicking outside the image
+  modal.onclick = function(event) {
+    if (event.target === modal) {
+      modal.style.display = "none";
+    }
+  }
+
+  // Close with ESC key
+  document.addEventListener('keydown', function(event) {
+    if (event.key === "Escape") {
+      modal.style.display = "none";
+    }
+  });
+  </script>
 </body>
 </html>
