--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
       top: 50%;
       left: 50%;
       display: flex;
+      min-width:178px;
       transform: translate(-50%, -50%);
       text-align: center;
       flex-direction: column;
@@ -114,7 +115,7 @@
       border-radius: 15px;
       cursor: pointer;
       font-size: 16px;
-      transition: background 0.3s ease;
+      transition: all 0.5s ease;
       justify-content: center;
       display: flex;
       color: rgb(202, 199, 199);
@@ -123,7 +124,7 @@
 
     .buttons button:hover {
       background: #02062d70;
-      transform: scale(1.02);
+      transform: scale(1.02) matrix3d(1, 0, 1, 0, 0.2, 1.1, 0, 0, -1, -1, 1, 0, 0, 0, 0, 1);
     }
 
     .help {
@@ -198,11 +199,11 @@
       position: fixed;
       top: 50%;
       left: 50%;
-      transform: translate(-50%, -50%);
+      transform: translate(-50%, -125%);
       z-index: 1000;
-      background: #000000d9;
-      padding: 30px;
-      border-radius: 12px;
+      background: #0000006e;
+      padding: 7px 8px;
+      border-radius: 5px;
       backdrop-filter: blur(5px);
       text-align: center;
     }
