--- a/indexmulti.html
+++ b/indexmulti.html
@@ -7,14 +7,14 @@
   <meta charset="UTF-8" />
   <title>Falling Bags Game</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <style>
+<style>
     html, body {
       background: url(https://cdn.theanimegallery.com/theanimegallery/0f50ae0f-3151-4586-8a03-bd255c359ee5-anime-wallpaper-in-hd.webp);
       margin: 0;
       background-size: contain;
       padding: 0;
       font-family: Arial, sans-serif;
-      height: 100vh;
+      height: 100dvh;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -81,9 +81,9 @@
       max-width: 200px;
     }
     #gameBox {
-    width: 95vw;
+    width: 100px;
     max-width: 500px;
-    min-width: 450px;
+    min-width: 369px;
     height: 100dvh;
     border: 4px solid rgb(0, 0, 0);
     position: relative;
@@ -130,7 +130,7 @@
       position: fixed;
       top: 50%;
       left: 50%;
-      min-width: 320px;
+      min-width: 300px;
       transform: translate(-50%, -50%);
       background: rgba(0, 0, 0, 0.531);
       backdrop-filter: blur(4px);
@@ -143,9 +143,9 @@
       box-shadow: 0 0 20px rgba(255, 255, 255, 0.4);
       z-index: 10;
       flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: nowrap;
+      align-items: center;
+      justify-content: center;
+      flex-wrap: nowrap;
     }
 
     #popup button {
@@ -190,23 +190,6 @@
       background-color: orange;
     }
   </style>
-</head>
-<body>
-<button id="pauseBtn" aria-label="Pause game" title="Pause game">
-  <svg width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
-    <rect x="5" y="4" width="5" height="16" rx="1"/>
-    <rect x="14" y="4" width="5" height="16" rx="1"/>
-  </svg>
-</button>
-
-
-  <div id="gameBox">
-     
-  </div>
-  <div id="popup"></div>
-  <audio id="popSound" src="win.wav"></audio>
-
-<script>
 // Firebase configuration
 const firebaseConfig = {
   apiKey: "AIzaSyCU1YjVXVXgy_xIoS-zMsuSfHbqB0AfwsI",
