--- a/indexmulti.html
+++ b/indexmulti.html
@@ -98,7 +98,7 @@
       max-width: 112px;
       height: 24vw;
       max-height: 112px;
-      background: url('goodie.png') no-repeat center/contain;
+      background: url('images/goodie.png') no-repeat center/contain;
       position: absolute;
       top: -60px;
       cursor: pointer;
