--- a/control.html
+++ b/control.html
@@ -209,7 +209,7 @@
         </header>
 
         <div class="controls">
-            <img class="imagepro" src="shadow.jpg" alt="1">
+            <img class="imagepro" src="images/shadow.jpg" alt="1">
             <p>Main bot shadow</p>
             <button id="start-btn" class="btn btn-primary">Start Bot</button>
             <button id="stop-btn" class="btn btn-danger" disabled>Stop Bot</button>
@@ -220,7 +220,7 @@
             </div>
         </div>
         <div class="controls">
-            <img class="imagepro" src="hana.png" alt="2">
+            <img class="imagepro" src="images/hana.png" alt="2">
             <p>Main bot hana</p>
             <button id="start-btn2" class="btn btn-primary">Start Bot</button>
             <button id="stop-btn2" class="btn btn-danger" disabled>Stop Bot</button>
