--- a/indexcontrl.html
+++ b/indexcontrl.html
@@ -257,7 +257,7 @@
     </div>
 
     <script>
-        const BASE_URL="http://mybotshadowv2.fly.dev"
+        const BASE_URL="https://mybotshadowv2.fly.dev"
         document.addEventListener('DOMContentLoaded', function() {
             const startBtn = document.getElementById('start-btn');
             const stopBtn = document.getElementById('stop-btn');
