--- a/indexcontrl.html
+++ b/indexcontrl.html
@@ -30,7 +30,7 @@
             color: var(--light);
             line-height: 1.6;
             background: url(https://wallpapersok.com/images/hd/dark-blue-galaxy-anime-city-j2uhevnno12yfbfy.jpg);
-            background-size: contain;
+            background-size: cover;
         }
 
         .container {
