--- a/indexcontrl.html
+++ b/indexcontrl.html
@@ -56,6 +56,7 @@
             background: linear-gradient(90deg, #0000ff8c, #0c6b6278, #0000ff8c);
             background-size: 400px;
             border-radius: 17px;
+            font-size: clamp(16px, 5vw, 36px);
             animation: dodo 5s linear infinite;
             backdrop-filter: blur(7px) brightness(1.5);
         }
@@ -93,6 +94,20 @@
         border: #dddddd8f solid 1px;
         }
 
+@media (max-width: 500px) {
+
+        .controls {
+        display: flow-root ;
+        background: black;
+        padding: 12px 15px;
+        border-radius: 15px;
+        margin-bottom: 6px;
+        border: #dddddd8f solid 1px;
+        }
+ .btn {
+            margin: 4px 2px;
+        }
+}
         .btn {
             padding: 12px 7px;
             border: none;
@@ -209,9 +224,8 @@
         }
 
         .deploy-section {
-            margin-top: 30px;
-            padding-top: 20px;
-            border-top: 1px solid var(--darker);
+           margin-top: -23px;
+           padding-top: 7px;
         }
     </style>
 </head>
@@ -260,7 +274,9 @@
         <header>
             <h1>SHADOW Bot Control Panel</h1>
         </header>
-
+                 <div class="deploy-section">
+            <button id="deploy-btn" class="btn btn-primary">Deploy Commands</button>
+            <div id="deploy-result" style="margin-top: 10px;"></div>
         <div class="controls">
             <img class="imagepro" src="images/shadow.jpg" alt="1">
             <p>Main bot shadow</p>
@@ -290,9 +306,7 @@
             </div>
         </div>
 
-        <div class="deploy-section">
-            <button id="deploy-btn" class="btn btn-primary">Deploy Commands</button>
-            <div id="deploy-result" style="margin-top: 10px;"></div>
+        
         </div>
     </div>
 
