--- a/Palestine-alert.html
+++ b/Palestine-alert.html
@@ -87,7 +87,7 @@
     const popup = document.getElementById('popup');
     const audio = new Audio('src/alert.wav'); // Place alert.mp3 in same folder
 
-    const socket = new WebSocket('ws://localhost:3000'); // Use ws:// in local dev
+    const socket = new WebSocket('wss://dc77d481206e.ngrok-free.app'); // Use ws:// in local dev
 
     let notificationEnabled = false;
 
