--- a/Palestine-alert.html
+++ b/Palestine-alert.html
@@ -6,7 +6,7 @@
   <style>
     body {
       font-family: sans-serif;
-      background: url(alert.jpg);
+      background: url(src/alert.jpg);
       backdrop-filter: blur(2px);
       color: white;
       display: flex;
